--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ pvporcupine>=4.0.0
 pyaudio>=0.2.14
 
 # Scientific computing (used for audio data processing if needed)
-numpy>=2.0.0
+# numpy>=2.0.0 (Not currently used)
+
+PyQt6>=6.6.1
